<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.loaiaboelsooud.Spotless.MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/WorkWithUsT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/work_with_us"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SIgnInPhoneno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:layout_marginStart="152dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SignInB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="177dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        android:icon="@drawable/ic_menu_send"
        android:text="@string/signin_B"
        app:layout_constraintBottom_toTopOf="@+id/WorkWithUsT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SIgnInPhoneno" />

    <Button
        android:id="@+id/WorkWithUsB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/come_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WorkWithUsT" />

    <TextView
        android:id="@+id/EnterurPhonenoT"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/please_enter_your_phone_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Please enter your phone no!" />

    <TextView
        android:id="@+id/CountryCodeT"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="412dp"
        android:layout_marginStart="60dp"
        android:text="@string/_971"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
